# backend-solver

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  sparse_bundle_adjustment.cc
include/: base_edge.hh  base_solver.hh  base_vertex.hh  edge.hh  eigen_types.h  inverse_depth_vertex.hh  minimizer_levenberg_marquardt.hh  plain_solver.hh  point3d_vertex.hh  pose3d_vertex.hh  problem.hh  relative_pose3d_edge.hh  reprojection_edge.hh  sparse_cholesky_solver.hh  sparse_schur_solver.hh  vertex.hh
src/: base_solver.cc  edge.cc  minimizer_levenberg_marquardt.cc  plain_solver.cc  pose3d_vertex.cc  problem.cc  relative_pose3d_edge.cc  reprojection_edge.cc  sparse_cholesky_solver.cc  sparse_schur_solver.cpp  vertex.cc
